# NPE-Project-Management

./: .gitignore  ERD.drawio
npe-project-management/app/Http/: Kernel.php
npe-project-management/app/Http/Controllers/: EmployeeController.php  ProjectController.php  ProjectUserController.php
npe-project-management/app/Http/Middleware/: CheckPm.php  HistoryState.php
npe-project-management/app/Models/: Milestone.php  Project.php  ProjectUser.php  Task.php  User.php
npe-project-management/database/factories/: MilestoneFactory.php  ProjectFactory.php  TaskFactory.php  UserFactory.php
npe-project-management/database/migrations/: 2014_10_12_000000_create_users_table.php  2023_05_06_231251_create_projects_table.php  2023_05_06_231700_create_project_users_table.php  2023_05_06_231936_create_milestones_table.php  2023_05_06_232133_create_tasks_table.php
npe-project-management/database/seeders/: DatabaseSeeder.php
npe-project-management/public/css/Admin/: home.css  project.css  report.css  sidebar.css
npe-project-management/public/css/Auth/: login.css
npe-project-management/public/css/Common/: profile.css
npe-project-management/public/css/Layout/: datatables.css  sidebar.css
npe-project-management/public/css/User/: detail-milestone.css  detail-project.css  home.css  my-task-finished-project.css  my-task.css  new-milestone.css  (+3 more)
npe-project-management/resources/views/: blank.blade.php  home.blade.php
npe-project-management/routes/: web.php
testing/: pylenium.json  pyproject.toml
testing/main/: npe.py  test_admin.py  test_example.py  test_user_pm.py
(+41 files in other folders)
